2005-11-23  Ross Burton  <ross@burtonini.com>

	* src/sj-main.c:
	Display the extractor failed error dialog before showing the main
	window, and set a default window icon (#321859).

2005-11-23  Ross Burton  <ross@burtonini.com>

	* src/sj-metadata-cdtext.c:
	Remove the CDIO API version check (#319793)

2005-11-23  Ross Burton  <ross@burtonini.com>

	* src/sj-metadata-musicbrainz.c:
	Handle track data imported from FreeDB (#155425, Bastien Nocera)

2005-11-23  Ross Burton  <ross@burtonini.com>

	* data/sound-juicer.desktop.in:
	Add generic name (#322161, Matthias Clasen)

2005-11-03  Ross Burton  <ross@burtonini.com>

	* src/sj-extracting.c:
	Handle G_FILENAME_ENCODING correctly, thanks Colin Leroy (#320604)

2005-10-29  Ross Burton  <ross@burtonini.com>

	* src/sj-metadata-musicbrainz.c:
	Fix handling of multiple albums (David Mandelberg, closes #318044)

2005-10-21  Ross Burton  <ross@burtonini.com>

	* configure.in:
	* NEWS:
	Version 2.13.1.

2005-10-20  William Jon McCann  <mccann@jhu.edu>

	* src/sj-main.c (set_drive_from_device):
	Lock the drive while SJ is running.  Fixes #319249.

	* .cvsignore: Add files.

2005-10-19  William Jon McCann  <mccann@jhu.edu>

	* src/sj-main.c (media_added_cb, media_removed_cb)
	(set_drive_from_device, set_device, device_changed_cb, main):
	* configure.in:
	Use nautilus-cd-burner 2.13 monitoring.  Fixes #317864.

2005-10-20  Ross Burton  <ross@burtonini.com>

	* src/sj-main.c:
	Collect an return value when getting media type, and check for
	errors.

2005-10-11  Ross Burton  <ross@burtonini.com>

	* src/sj-prefs.c:
	Protect against FileChooserButton returning a NULL path (#317999)

2005-10-07  Ross Burton  <ross@burtonini.com>

	* configure.in:
	Build without libcdio (thanks William Jon McCann).

2005-10-07  Ross Burton  <ross@burtonini.com>

	* src/sj-play.c:
	Protect against invalid iterators.

2005-10-07  Ross Burton  <ross@burtonini.com>

	* configure.in:
	* src/sound-juicer.h:
	* src/sj-main.c: