@@ -864,7 +864,7 @@
   <property name="type">GTK_WINDOW_TOPLEVEL</property>
   <property name="window_position">GTK_WIN_POS_NONE</property>
   <property name="modal">False</property>
-  <property name="resizable">True</property>
+  <property name="resizable">False</property>
   <property name="destroy_with_parent">False</property>
   <property name="decorated">True</property>
   <property name="skip_taskbar_hint">False</property>
@@ -955,7 +955,7 @@
 		      <property name="column_spacing">6</property>
 
 		      <child>
-			<widget class="GtkLabel" id="label36">
+			<widget class="GtkLabel" id="cd_label">
 			  <property name="visible">True</property>
 			  <property name="label" translatable="yes">CD _drive:</property>
 			  <property name="use_underline">True</property>
@@ -1191,7 +1191,7 @@
 		      <property name="column_spacing">6</property>
 
 		      <child>
-			<widget class="GtkLabel" id="label23">
+			<widget class="GtkLabel" id="folder_label">
 			  <property name="visible">True</property>
 			  <property name="label" translatable="yes">Folder hie_rarchy:</property>
 			  <property name="use_underline">True</property>
@@ -1220,7 +1220,7 @@
 		      </child>
 
 		      <child>
-			<widget class="GtkLabel" id="label24">
+			<widget class="GtkLabel" id="file_label">
 			  <property name="visible">True</property>
 			  <property name="label" translatable="yes">File _name:</property>
 			  <property name="use_underline">True</property>
@@ -1249,7 +1249,7 @@
 		      </child>
 
 		      <child>
-			<widget class="GtkLabel" id="label26">
+			<widget class="GtkLabel" id="example_label">
 			  <property name="visible">True</property>
 			  <property name="label" translatable="yes">Example Path:</property>
 			  <property name="use_underline">False</property>
@@ -1418,15 +1418,15 @@
 		      <property name="spacing">6</property>
 
 		      <child>
-			<widget class="GtkLabel" id="label37">
+			<widget class="GtkLabel" id="profile_label">
 			  <property name="visible">True</property>
-			  <property name="label" translatable="yes">O_utput:</property>
+			  <property name="label" translatable="yes">O_utput Format:</property>
 			  <property name="use_underline">True</property>
 			  <property name="use_markup">False</property>
 			  <property name="justify">GTK_JUSTIFY_LEFT</property>
 			  <property name="wrap">False</property>
 			  <property name="selectable">False</property>
-			  <property name="xalign">0.5</property>
+			  <property name="xalign">0</property>
 			  <property name="yalign">0.5</property>
 			  <property name="xpad">0</property>
 			  <property name="ypad">0</property>
