@@ -1,5 +1,13 @@
 2005-11-23  Ross Burton  <ross@burtonini.com>
 
+	* data/sound-juicer.glade:
+	Make the Prefs dialog non-resizable, and name the labels.
+
+	* src/sj-prefs.c:
+	Add the labels to a size group (#316965)
+
+2005-11-23  Ross Burton  <ross@burtonini.com>
+
 	* src/sj-main.c:
 	Display the extractor failed error dialog before showing the main
 	window, and set a default window icon (#321859).
